added texts for molecularweight and morphology
SVN-Revision: 8759

--- a/gov/nih/nci/calab/resources/submit.properties
+++ b/gov/nih/nci/calab/resources/submit.properties
@@ -43,6 +43,12 @@ nanoparticleCompositionForm.otherGeneration = Other Generation
 message.addParticleSize=You've successfully added the size characterization data.
 error.addParticleSize=Error in saving size characterization data: {0}
 
+message.addParticleMolecularWeight=You've successfully added the molecular weight characterization data.
+error.addParticleMolecularWeight=Error in saving molecular weight characterization data: {0}
+
+message.addParticleMorphology=You've successfully added the morphology characterization data.
+error.addParticleMorphology=Error in saving morphology characterization data: {0}
+
 message.addInvitroHemolysis=You've successfully added the invitro hemolysis characterization data.
 error.addInvitroHemolysis=Error in saving invitro hemolysis characterization data: {0}
 
