--- a/build.properties
+++ b/build.properties
@@ -4,3 +4,5 @@ hostname=calab-dev.nci.nih.gov
 contextPath=calab
 
 file.repository.dir=/local/content/calab/workflowdata/
+
+particle.file.repository.dir=/local/content/calab/particles/
