--- a/src/gov/nih/nci/calab/resources/submit.properties
+++ b/src/gov/nih/nci/calab/resources/submit.properties
@@ -43,6 +43,9 @@ nanoparticleCompositionForm.otherGeneration = Other Generation
 message.addParticleSize=You've successfully added the size characterization data.
 error.addParticleSize=Error in saving size characterization data: {0}
 
+message.addParticleSurface=You've successfully added the surface characterization data.
+error.addParticleSurface=Error in saving surface characterization data: {0}
+
 message.addParticleMolecularWeight=You've successfully added the molecular weight characterization data.
 error.addParticleMolecularWeight=Error in saving molecular weight characterization data: {0}
 
