--- a/src/gov/nih/nci/calab/resources/submit.properties
+++ b/src/gov/nih/nci/calab/resources/submit.properties
@@ -52,6 +52,9 @@ error.addParticleMolecularWeight=Error in saving molecular weight characterizati
 message.addParticleMorphology=You've successfully added the morphology characterization data.
 error.addParticleMorphology=Error in saving morphology characterization data: {0}
 
+message.addParticleShape=You've successfully added the shape characterization data.
+error.addParticleShape=Error in saving shape characterization data: {0}
+
 message.addInvitroHemolysis=You've successfully added the invitro hemolysis characterization data.
 error.addInvitroHemolysis=Error in saving invitro hemolysis characterization data: {0}
 
