--- a/src/gov/nih/nci/calab/resources/submit.properties
+++ b/src/gov/nih/nci/calab/resources/submit.properties
@@ -55,6 +55,15 @@ error.addParticleMorphology=Error in saving morphology characterization data: {0
 message.addParticleShape=You've successfully added the shape characterization data.
 error.addParticleShape=Error in saving shape characterization data: {0}
 
+message.addParticleStability=You've successfully added the stability characterization data.
+error.addParticleStability=Error in saving stability characterization data: {0}
+
+message.addParticlePurity=You've successfully added the purity characterization data.
+error.addParticlePurity=Error in saving purity characterization data: {0}
+
+message.addParticleSolubility=You've successfully added the solubility characterization data.
+error.addParticleSolubility=Error in saving solubility characterization data: {0}
+
 message.addInvitroHemolysis=You've successfully added the invitro hemolysis characterization data.
 error.addInvitroHemolysis=Error in saving invitro hemolysis characterization data: {0}
 
