--- a/src/gov/nih/nci/calab/resources/submit.properties
+++ b/src/gov/nih/nci/calab/resources/submit.properties
@@ -40,6 +40,32 @@ nanoparticleCompositionForm.otherBranch = Other Branch
 
 nanoparticleCompositionForm.otherGeneration = Other Generation
 
+nanoparticleSizeForm.characterizationSource=Characterization Source
+nanoparticleSizeForm.viewTitle=View Title
+
+nanoparticleMolecularWeightForm.characterizationSource=Characterization Source
+nanoparticleMolecularWeightForm.viewTitle=View Title
+
+nanoparticleMorphologyForm.characterizationSource=Characterization Source
+nanoparticleMorphologyForm.viewTitle=View Title
+nanoparticleMorphologyForm.type=Type
+
+nanoparticleShapeForm.characterizationSource=Characterization Source
+nanoparticleShapeForm.viewTitle=View Title
+nanoparticleShapeForm.type=Type
+
+nanoparticleSurfaceForm.characterizationSource=Characterization Source
+nanoparticleSurfaceForm.viewTitle=View Title
+
+nanoparticleSolubilityForm.characterizationSource=Characterization Source
+nanoparticleSolubilityForm.viewTitle=View Title
+
+nanoparticlePurityForm.characterizationSource=Characterization Source
+nanoparticlePurityForm.viewTitle=View Title
+
+nanoparticleStabilityForm.characterizationSource=Characterization Source
+nanoparticleStabilityForm.viewTitle=View Title
+
 message.addParticleSize=You've successfully added the size characterization data.
 error.addParticleSize=Error in saving size characterization data: {0}
 
