--- a/src/gov/nih/nci/calab/resources/submit.properties
+++ b/src/gov/nih/nci/calab/resources/submit.properties
@@ -101,3 +101,48 @@ error.addInvitroPlateAggregation=Error in saving invitro plate aggregation chara
 
 message.addInvitroProteinBinding=You've successfully added the invitro plasma protein binding characterization data.
 error.addInvitroProteinBinding=Error in saving invitro plasma protein binding characterization data: {0}
+
+message.addInvitroPhagocytosis=You've successfully added the invitro phagocytosis characterization data.
+error.addInvitroPhagocytosis=Error in saving invitro phagocytosis characterization data: {0}
+
+message.addInvitroOxidativeBurst=You've successfully added the invitro oxidative burst characterization data.
+error.addInvitroOxidativeBurst=Error in saving invitro oxidative burst characterization data: {0}
+
+message.addInvitroCFU_GM=You've successfully added the invitro cfu-gm characterization data.
+error.addInvitroCFU_GM=Error in saving invitro cfu-gm characterization data: {0}
+
+message.addInvitroLeukocyteProliferation=You've successfully added the invitro leukocyte proliferation characterization data.
+error.addInvitroLeukocyteProliferation=Error in saving invitro leukocyte proliferation characterization data: {0}
+
+message.addInvitroNKCellCytotoxicActivity=You've successfully added the invitro NK Cell Cytotoxic Activity characterization data.
+error.addInvitroNKCellCytotoxicActivity=Error in saving invitro NK Cell Cytotoxic Activity characterization data: {0}
+
+message.addInvitroCytokineInduction=You've successfully added the invitro cytokine induction characterization data.
+error.addInvitroCytokineInduction=Error in saving invitro cytokine induction characterization data: {0}
+
+message.addInvitroChemotaxis=You've successfully added the invitro chemotaxis characterization data.
+error.addInvitroChemotaxis=Error in saving invitro chemotaxis characterization data: {0}
+
+message.addInvitroComplementActivation=You've successfully added the invitro complement activation characterization data.
+error.addInvitroComplementActivation=Error in saving invitro complement activation characterization data: {0}
+
+message.addInvitroCellViability=You've successfully added the invitro cell viability characterization data.
+error.addInvitroCellViability=Error in saving invitro cell viability characterization data: {0}
+
+message.addInvitroCaspase3Activation=You've successfully added the invitro caspase 3 activation characterization data.
+error.addInvitroCaspase3Activation=Error in saving invitro caspase 3 activation characterization data: {0}
+
+message.addInvitroEnzymeInduction=You've successfully added the invitro enzyme induction characterization data.
+error.addInvitroEnzymeInduction=Error in saving invitro enzyme induction characterization data: {0}
+
+message.addInvitroOxidativeStress=You've successfully added the invitro oxidative stress characterization data.
+error.addInvitroOxidativeStress=Error in saving invitro oxidative stress characterization data: {0}
+
+message.addInvitroGlucuronidationSulphation=You've successfully added the invitro glucuronidation sulphation characterization data.
+error.addInvitroGlucuronidationSulphation=Error in saving invitro glucuronidation sulphation characterization data: {0}
+
+message.addInvitroCYP450=You've successfully added the invitro cyp450 characterization data.
+error.addInvitroCYP450=Error in saving invitro cyp450 characterization data: {0}
+
+message.addInvitroROS=You've successfully added the invitro ros characterization data.
+error.addInvitroROS=Error in saving invitro ros characterization data: {0}
