--- a/gov/nih/nci/calab/resources/workflow.properties
+++ b/gov/nih/nci/calab/resources/workflow.properties
@@ -23,6 +23,7 @@ error.viewAliquot.noresult=Error in viewing aliquot: {0}.
 
 error.createRun=Error in creating a run: {0}.
 error.createAssayRun=Error in creating the assay run: {0}.
+message.searchRun.empty=No runs found for the given parameters.
 
 maskAliquotForm.description=The aliqout masking reason
 maskFileForm.description=The file masking reason
