added publishReportForm entries.
SVN-Revision: 8973

--- a/gov/nih/nci/calab/resources/submit.properties
+++ b/gov/nih/nci/calab/resources/submit.properties
@@ -21,6 +21,11 @@ nanoparticleGeneralInfoForm.particleType=Particle Type
 nanoparticleGeneralInfoForm.particleID=Particle ID
 nanoparticleGeneralInfoForm.visibilities=Visibility
 
+publishReportForm.particleID=Particle ID
+publishReportForm.reportType=Report Type
+publishReportForm.reportFile=Report File
+publishReportForm.title=Title
+
 nanoparticleCompositionForm.characterizationSource=Characterization Source
 nanoparticleCompositionForm.viewTitle=View Title
 nanoparticleCompositionForm.carbonNanotube.growthDiameter=Growth Diameter
