--- a/src/gov/nih/nci/calab/resources/submit.properties
+++ b/src/gov/nih/nci/calab/resources/submit.properties
@@ -97,57 +97,114 @@ error.addParticleSolubility=Error in saving solubility characterization data: {0
 
 message.addInvitroHemolysis=You've successfully added the invitro hemolysis characterization data.
 error.addInvitroHemolysis=Error in saving invitro hemolysis characterization data: {0}
+invitroImmunotoxicityHemolysisForm.characterizationSource=Characterization Source
+invitroImmunotoxicityHemolysisForm.viewTitle=View Title
+invitroImmunotoxicityHemolysisForm.numberOfDerivedBioAssayData=Number of Histograms/Charts
 
 message.addInvitroCoagulation=You've successfully added the invitro coagulation characterization data.
 error.addInvitroCoagulation=Error in saving invitro coagulation characterization data: {0}
+invitroImmunotoxicityCoagulationForm.characterizationSource=Characterization Source
+invitroImmunotoxicityCoagulationForm.viewTitle=View Title
+invitroImmunotoxicityCoagulationForm.numberOfDerivedBioAssayData=Number of Histograms/Charts
 
 message.addInvitroPlateAggregation=You've successfully added the invitro plate aggregation characterization data.
 error.addInvitroPlateAggregation=Error in saving invitro plate aggregation characterization data: {0}
+invitroImmunotoxicityPlateAggregationForm.characterizationSource=Characterization Source
+invitroImmunotoxicityPlateAggregationForm.viewTitle=View Title
+invitroImmunotoxicityPlateAggregationForm.numberOfDerivedBioAssayData=Number of Histograms/Charts
 
 message.addInvitroProteinBinding=You've successfully added the invitro plasma protein binding characterization data.
 error.addInvitroProteinBinding=Error in saving invitro plasma protein binding characterization data: {0}
+invitroImmunotoxicityProteinBindingForm.characterizationSource=Characterization Source
+invitroImmunotoxicityProteinBindingForm.viewTitle=View Title
+invitroImmunotoxicityProteinBindingForm.numberOfDerivedBioAssayData=Number of Histograms/Charts
 
 message.addInvitroPhagocytosis=You've successfully added the invitro phagocytosis characterization data.
 error.addInvitroPhagocytosis=Error in saving invitro phagocytosis characterization data: {0}
+invitroImmunotoxicityPhagocytosisForm.characterizationSource=Characterization Source
+invitroImmunotoxicityPhagocytosisForm.viewTitle=View Title
+invitroImmunotoxicityPhagocytosisForm.numberOfDerivedBioAssayData=Number of Histograms/Charts
 
 message.addInvitroOxidativeBurst=You've successfully added the invitro oxidative burst characterization data.
 error.addInvitroOxidativeBurst=Error in saving invitro oxidative burst characterization data: {0}
+invitroImmunotoxicityOxidativeBurstForm.characterizationSource=Characterization Source
+invitroImmunotoxicityOxidativeBurstForm.viewTitle=View Title
+invitroImmunotoxicityOxidativeBurstForm.numberOfDerivedBioAssayData=Number of Histograms/Charts
 
 message.addInvitroCFU_GM=You've successfully added the invitro cfu-gm characterization data.
 error.addInvitroCFU_GM=Error in saving invitro cfu-gm characterization data: {0}
+invitroImmunotoxicityCFU_GMForm.characterizationSource=Characterization Source
+invitroImmunotoxicityCFU_GMForm.viewTitle=View Title
+invitroImmunotoxicityCFU_GMForm.numberOfDerivedBioAssayData=Number of Histograms/Charts
 
 message.addInvitroLeukocyteProliferation=You've successfully added the invitro leukocyte proliferation characterization data.
 error.addInvitroLeukocyteProliferation=Error in saving invitro leukocyte proliferation characterization data: {0}
+invitroImmunotoxicityLeukocyteProliferationForm.characterizationSource=Characterization Source
+invitroImmunotoxicityLeukocyteProliferationForm.viewTitle=View Title
+invitroImmunotoxicityLeukocyteProliferationForm.numberOfDerivedBioAssayData=Number of Histograms/Charts
 
 message.addInvitroNKCellCytotoxicActivity=You've successfully added the invitro NK Cell Cytotoxic Activity characterization data.
 error.addInvitroNKCellCytotoxicActivity=Error in saving invitro NK Cell Cytotoxic Activity characterization data: {0}
+invitroImmunotoxicityNKCellCytotoxicForm.characterizationSource=Characterization Source
+invitroImmunotoxicityNKCellCytotoxicForm.viewTitle=View Title
+invitroImmunotoxicityNKCellCytotoxicForm.numberOfDerivedBioAssayData=Number of Histograms/Charts
 
 message.addInvitroCytokineInduction=You've successfully added the invitro cytokine induction characterization data.
 error.addInvitroCytokineInduction=Error in saving invitro cytokine induction characterization data: {0}
+invitroImmunotoxicityCytokineInductionForm.characterizationSource=Characterization Source
+invitroImmunotoxicityCytokineInductionForm.viewTitle=View Title
+invitroImmunotoxicityCytokineInductionForm.numberOfDerivedBioAssayData=Number of Histograms/Charts
 
 message.addInvitroChemotaxis=You've successfully added the invitro chemotaxis characterization data.
 error.addInvitroChemotaxis=Error in saving invitro chemotaxis characterization data: {0}
+invitroImmunotoxicityChemotaxisForm.characterizationSource=Characterization Source
+invitroImmunotoxicityChemotaxisForm.viewTitle=View Title
+invitroImmunotoxicityChemotaxisForm.numberOfDerivedBioAssayData=Number of Histograms/Charts
 
 message.addInvitroComplementActivation=You've successfully added the invitro complement activation characterization data.
 error.addInvitroComplementActivation=Error in saving invitro complement activation characterization data: {0}
+invitroImmunotoxicityComplementActivationForm.characterizationSource=Characterization Source
+invitroImmunotoxicityComplementActivationForm.viewTitle=View Title
+invitroImmunotoxicityComplementActivationForm.numberOfDerivedBioAssayData=Number of Histograms/Charts
 
 message.addInvitroCellViability=You've successfully added the invitro cell viability characterization data.
 error.addInvitroCellViability=Error in saving invitro cell viability characterization data: {0}
+invitroCytotoxicityCellViabilityForm.characterizationSource=Characterization Source
+invitroCytotoxicityCellViabilityForm.viewTitle=View Title
+invitroCytotoxicityCellViabilityForm.numberOfDerivedBioAssayData=Number of Histograms/Charts
 
 message.addInvitroCaspase3Activation=You've successfully added the invitro caspase 3 activation characterization data.
 error.addInvitroCaspase3Activation=Error in saving invitro caspase 3 activation characterization data: {0}
+invitroCytotoxicityCaspase3ActivationForm.characterizationSource=Characterization Source
+invitroCytotoxicityCaspase3ActivationForm.viewTitle=View Title
+invitroCytotoxicityCaspase3ActivationForm.numberOfDerivedBioAssayData=Number of Histograms/Charts
 
 message.addInvitroEnzymeInduction=You've successfully added the invitro enzyme induction characterization data.
 error.addInvitroEnzymeInduction=Error in saving invitro enzyme induction characterization data: {0}
+invitroToxicityEnzymeInductionForm.characterizationSource=Characterization Source
+invitroToxicityEnzymeInductionForm.viewTitle=View Title
+invitroToxicityEnzymeInductionForm.numberOfDerivedBioAssayData=Number of Histograms/Charts
 
 message.addInvitroOxidativeStress=You've successfully added the invitro oxidative stress characterization data.
 error.addInvitroOxidativeStress=Error in saving invitro oxidative stress characterization data: {0}
+invitroToxicityOxidativeStressForm.characterizationSource=Characterization Source
+invitroToxicityOxidativeStressForm.viewTitle=View Title
+invitroToxicityOxidativeStressForm.numberOfDerivedBioAssayData=Number of Histograms/Charts
 
 message.addInvitroGlucuronidationSulphation=You've successfully added the invitro glucuronidation sulphation characterization data.
 error.addInvitroGlucuronidationSulphation=Error in saving invitro glucuronidation sulphation characterization data: {0}
+invitroMetabolicStabilityGlucuronidationSulphationForm.characterizationSource=Characterization Source
+invitroMetabolicStabilityGlucuronidationSulphationForm.viewTitle=View Title
+invitroMetabolicStabilityGlucuronidationSulphationForm.numberOfDerivedBioAssayData=Number of Histograms/Charts
 
 message.addInvitroCYP450=You've successfully added the invitro cyp450 characterization data.
 error.addInvitroCYP450=Error in saving invitro cyp450 characterization data: {0}
+invitroMetabolicStabilityCYP450Form.characterizationSource=Characterization Source
+invitroMetabolicStabilityCYP450Form.viewTitle=View Title
+invitroMetabolicStabilityCYP450Form.numberOfDerivedBioAssayData=Number of Histograms/Charts
 
 message.addInvitroROS=You've successfully added the invitro ros characterization data.
 error.addInvitroROS=Error in saving invitro ros characterization data: {0}
+invitroMetabolicStabilityROSForm.characterizationSource=Characterization Source
+invitroMetabolicStabilityROSForm.viewTitle=View Title
+invitroMetabolicStabilityROSForm.numberOfDerivedBioAssayData=Number of Histograms/Charts
