added function messages
SVN-Revision: 9009

--- a/gov/nih/nci/calab/resources/submit.properties
+++ b/gov/nih/nci/calab/resources/submit.properties
@@ -49,7 +49,6 @@ nanoparticleCompositionForm.otherBranch = Other Branch
 
 nanoparticleCompositionForm.otherGeneration = Other Generation
 
-
 nanoparticleMorphologyForm.type=Type
 
 nanoparticleShapeForm.type=Type
@@ -134,3 +133,7 @@ error.addInvitroCYP450=Error in saving invitro cyp450 characterization data: {0}
 
 message.addInvitroROS=You've successfully added the invitro ros characterization data.
 error.addInvitroROS=Error in saving invitro ros characterization data: {0}
+
+error.addparticle.function=Error in saving function data: {0}
+function.numberOfLinkages=Number of Linkages
+function.numberOfAgentTargets=Number of Agent Targets
