--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -32,6 +32,6 @@
 		<url-pattern>/processFileUpload</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
-		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>disclaimer.jsp</welcome-file>
 	</welcome-file-list>
 </web-app>
