Updated to handle invitro submission validation message.
SVN-Revision: 9055

--- a/gov/nih/nci/calab/resources/submit.properties
+++ b/gov/nih/nci/calab/resources/submit.properties
@@ -30,7 +30,7 @@ characterizationSource=Characterization Source
 viewTitle=View Title
 numberOfDerivedBioAssayData=Number of Histograms/Charts
 numberOfDataPoints=Number of Data Points
-numberOfConditions=Number of Conditions
+numberOfConditions=Number of Conditions must be an integer.
 
 nanoparticleCompositionForm.carbonNanotube.growthDiameter=Growth Diameter
 nanoparticleCompositionForm.carbonNanotube.averageLength=Average Length
