--- a/gov/nih/nci/calab/resources/submit.properties
+++ b/gov/nih/nci/calab/resources/submit.properties
@@ -134,6 +134,7 @@ error.addInvitroCYP450=Error in saving invitro cyp450 characterization data: {0}
 message.addInvitroROS=You've successfully added the invitro ros characterization data.
 error.addInvitroROS=Error in saving invitro ros characterization data: {0}
 
+message.addparticle.function=You've successfully added function data.
 error.addparticle.function=Error in saving function data: {0}
 function.numberOfLinkages=Number of Linkages
 function.numberOfAgentTargets=Number of Agent Targets
