updated general info message
SVN-Revision: 9097

--- a/gov/nih/nci/calab/resources/submit.properties
+++ b/gov/nih/nci/calab/resources/submit.properties
@@ -7,7 +7,7 @@ errors.date={0} must be a date in the format of MM/dd/yy.
 errors.float={0} must be a float number.
 
 error.createNanoparticle=Error in creating the nanoparticle metadata: {0}
-message.createNanoparticle.secure=Selected particles have been successfully assigned to be visible for group: {0}
+message.createNanoparticle.secure=Selected particles have been successfully assigned to be visible for group(s): {0}
 error.nanoparticle.generalInfo=Error in getting the nanoparticle general info: {0}.
 
 error.submitReport=Error in submiting the report: {0}
