--- a/src/gov/nih/nci/calab/resources/submit.properties
+++ b/src/gov/nih/nci/calab/resources/submit.properties
@@ -14,8 +14,8 @@ error.submitReport=Error in submiting the report: {0}
 message.submitReport.secure=Uploaded report has been sucessfully assigned to be visibile for group: {0}
 message.submitReport.file=The report {0} has been succesfully uploaded.
 
-message.addParticleComposition=You've successfully added the phyiscal composition data.
-error.addParticleComposition=Error in saving phyiscal composition data: {0}
+message.addParticleComposition=You've successfully added the physical composition data.
+error.addParticleComposition=Error in saving physical composition data: {0}
 
 nanoparticleGeneralInfoForm.particleType=Particle Type
 nanoparticleGeneralInfoForm.particleID=Particle ID
