--- a/gov/nih/nci/calab/resources/submit.properties
+++ b/gov/nih/nci/calab/resources/submit.properties
@@ -11,7 +11,7 @@ message.createNanoparticle.secure=Selected particles have been successfully assi
 error.nanoparticle.generalInfo=Error in getting the nanoparticle general info: {0}.
 
 error.submitReport=Error in submiting the report: {0}
-message.submitReport.secure=Uploaded report has been sucessfully assigned to be visibile for group: {0}
+message.submitReport.secure=Uploaded report has been sucessfully assigned to be visibile for groups: {0}
 message.submitReport.file=The report {0} has been succesfully uploaded.
 
 message.addParticleComposition=You've successfully added the physical composition data.
