--- a/src/gov/nih/nci/calab/resources/search.properties
+++ b/src/gov/nih/nci/calab/resources/search.properties
@@ -27,3 +27,6 @@ error.viewSampleDetails=Error in showing sample details: {0}.
 error.searchNanoparticle=Error in seaching nanoparticle metadata: {0}
 message.searchNanoparticle.secure=You have access to the {0} particles out of total {1} particles for particle type {2}.
 message.searchNanoparticle.noresult=No nanoparticles were found for the given parameters
+
+error.searchReport=Error in seaching report data: {0}
+message.searchReport.noresult=No reports were found for the given parameters
