--- a/src/gov/nih/nci/calab/resources/application.properties
+++ b/src/gov/nih/nci/calab/resources/application.properties
@@ -30,3 +30,6 @@ updatePasswordForm.newPassword=New Password is required and can not be the same 
 updatePasswordForm.newPassword2=Retype new password again to match.
 message.password = New password is successfully updated in caLAB.
 error.password = Error in updating user password: {0}.
+
+# file download
+error.download.file=Error in downloading file: {0}.
