--- a/src/fileupload.properties.template
+++ b/src/fileupload.properties.template
@@ -1,10 +1,10 @@
 # For File input and output
 # Directory for storing caLAB data files 
 #fileRepositoryDir=C:\\temp\\calab\\fileupload\\
-fileRepositoryDir=@FILE_REPOSITORY_DIR@
+fileRepositoryDir=@FILE_REPOSITORY_DIR@/workflowdata
 
 # Directory for storing caLAB files
-particleFileRepositoryDir=@PARTICLEFILE_REPOSITORY_DIR@
+particleFileRepositoryDir=@FILE_REPOSITORY_DIR@
 
 # Properties for HTTP-based file upload 
 archiveValue=http://@HOSTNAME@/calab/workflow/SignedHttpUploadApplet.jar
