keep the dev configuration
SVN-Revision: 2451

--- a/build.properties
+++ b/build.properties
@@ -1,8 +1,8 @@
 database.jndi.name=calab-dev
 
-hostname=calab-dev.nci.nih.gov
+hostname=calab-dev
 contextPath=calab
 
-file.repository.dir=/local/content/calab/workflowdata/
+file.repository.dir=/local/content/calab
 
-particle.file.repository.dir=/local/content/calab/particles/
+
