added surface messages
SVN-Revision: 9226

--- a/gov/nih/nci/calab/resources/submit.properties
+++ b/gov/nih/nci/calab/resources/submit.properties
@@ -53,6 +53,9 @@ nanoparticleMorphologyForm.type=Type
 
 nanoparticleShapeForm.type=Type
 
+nanoparticleSurfaceForm.numberOfSurfaceChemistries=Number of Surface Chemistries
+nanoparticleSurfaceForm.numberOfMolecules=Number of Molecules
+
 message.addParticleSize=You've successfully added the size characterization data.
 error.addParticleSize=Error in saving size characterization data: {0}
 
