--- a/src/gov/nih/nci/calab/resources/submit.properties
+++ b/src/gov/nih/nci/calab/resources/submit.properties
@@ -49,6 +49,9 @@ nanoparticleCompositionForm.otherBranch = Other Branch
 
 nanoparticleCompositionForm.otherGeneration = Other Generation
 
+loadDerivedBioAssayDataForm.title=Assay Result File Title
+loadDerivedBioAssayDataForm.file=Assay Result File
+
 nanoparticleMorphologyForm.type=Type
 
 nanoparticleShapeForm.type=Type
