--- a/src/gov/nih/nci/calab/resources/submit.properties
+++ b/src/gov/nih/nci/calab/resources/submit.properties
@@ -30,7 +30,9 @@ characterizationSource=Characterization Source
 viewTitle=View Title
 numberOfDerivedBioAssayData=Number of Histograms/Charts
 numberOfDataPoints=Number of Data Points
-numberOfConditions=Number of Conditions must be an integer.
+numberOfConditions=Number of Conditions
+otherInstrumentType=Other Instrument Type
+otherManufacturer=Other Manufacturer
 
 nanoparticleCompositionForm.carbonNanotube.growthDiameter=Growth Diameter
 nanoparticleCompositionForm.carbonNanotube.averageLength=Average Length
