--- a/src/gov/nih/nci/calab/resources/submit.properties
+++ b/src/gov/nih/nci/calab/resources/submit.properties
@@ -61,6 +61,15 @@ nanoparticleShapeForm.type=Type
 nanoparticleSurfaceForm.numberOfSurfaceChemistries=Number of Surface Chemistries
 nanoparticleSurfaceForm.numberOfMolecules=Number of Molecules
 
+nanoparticleSolubilityForm.criticalConcentrationValue=Critical Concentration value
+
+nanoparticleSurfaceForm.chargeValue=Charge value
+nanoparticleSurfaceForm.zetaPotentialValue=Zeta Potential value
+nanoparticleSurfaceForm.surfaceAreaValue=Surface Area value
+
+nanoparticleShapeForm.minDimension=Minimum Dimension value
+nanoparticleShapeForm.maxDimension=Maximum Dimension value 
+
 message.addParticleSize=You've successfully added the size characterization data.
 error.addParticleSize=Error in saving size characterization data: {0}
 
