--- a/src/gov/nih/nci/calab/resources/workflow.properties
+++ b/src/gov/nih/nci/calab/resources/workflow.properties
@@ -9,8 +9,9 @@ errors.float={0} must be a float number.
 useAliquotForm.runId=Run ID
 useAliquotForm.assignedAliquots=At least one aliquot ID
 createRunForm.assay=Assay name
-createRunForm.runBy=The Run by
-createRunForm.runDate=The Run date
+createRunForm.runBy=Run by
+createRunForm.runDate=Run date
+createRunForm.assignedAliquots=Aliquot ID
 
 createAssayRunForm.runBy=The Run by
 createAssayRunForm.runDate=The Run date
