--- a/src/gov/nih/nci/calab/resources/workflow.properties
+++ b/src/gov/nih/nci/calab/resources/workflow.properties
@@ -25,6 +25,7 @@ error.viewAliquot.noresult=Error in viewing aliquot: {0}.
 error.createRun=Error in creating a run: {0}.
 error.createAssayRun=Error in creating the assay run: {0}.
 message.searchRun.empty=No runs found for the given parameters.
+error.searchRun=Error in searching existing runs: {0}.
 
 maskAliquotForm.description=The aliqout masking reason
 maskFileForm.description=The file masking reason
