--- a/src/exception.properties
+++ b/src/exception.properties
@@ -1,2 +1,51 @@
 #Server-side validation exception properties
 numberOfConditions=Number of Conditions must be an integer.
+conditionValues=The Condition values must be integers.
+
+hemolysisPercentageRequired=The Hemolysis Percentage is a required field.
+hemolysisPercentageDouble=The Hemolysis Percentage must be a float value.
+
+coagulationTimeRequired=The Coagulation Time is a required field.
+coagulationTimeDouble=The Coagulation Time must be an integer.
+
+plateletAggregationPercentageRequired=The Platelet Aggregation Percentage is a required field.
+plateletAggregationPercentageDouble=The Platelet Aggregation Percentage must be a float value.
+
+plasmaProteinBindingPercentageRequired=The Plasma Protein Binding Percentage is a required field.
+plasmaProteinBindingPercentageDouble=The Plasma Protein Binding Percentage must be a float value.
+
+cfu-gmRequired=The CFU-GM value is a required field.
+cfu-gmInteger=The CFU-GM value must be an integer value.
+
+chemotaxisRequired=The Relative Fluorescent Values is a required field.
+chemotaxisInteger=The Relative Fluorescent Values must be an integer.
+
+leukocyteProliferationPercentageRequired=The Leukocyte Proliferation Percentage is a required field.
+leukocyteProliferationPercentageDouble=The Leukocyte Proliferation Percentage must be a float value.
+
+nkCellCytotoxicityActivityPercentageRequired=The NK Cell Cytotoxicity Activity Percentage is a required field.
+nkCellCytotoxicityActivityPercentageDouble=The NK Cell Cytotoxicity Activity Percentage must be a float value.
+
+oxidativeBurstPercentageRequired=The Oxidative Burst Percentage is a required field.
+oxidativeBurstPercentageDouble=The Oxidative Burst Percentage must be a float value.
+
+complementActivationPercentageRequired=The Complement Activation Percentage is a required field.
+complementActivationPercentageDouble=The Complement Activation Percentage must be a float value.
+
+cytokineInductionPercentageRequired=The Cytokine Induction Percentage is a required field.
+cytokineInductionPercentageDouble=The Cytokine Induction Percentage must be a float value.
+
+phagocytosisRequired=The Fold Phagocytosis Induction is a required field.
+phagocytosisInteger=The Fold Phagocytosis Induction must be an integer.
+
+enzymeInductionPercentageRequired=The Enzyme Induction Percentage is a required field.
+enzymeInductionPercentageDouble=The Enzyme Induction Percentage must be a float value.
+
+oxidativeStressPercentageRequired=The Oxidative Stress Percentage is a required field.
+oxidativeStressPercentageDouble=The Oxidative Stress Percentage must be a float value.
+
+capase3ActivationPercentageRequired=The Capase 3 Activation Percentage is a required field.
+capase3ActivationPercentageDouble=The Capase 3 Activation Percentage must be a float value.
+
+cellViabilityPercentageRequired=The Cell Viability Percentage is a required field.
+cellViabilityPercentageDouble=The Cell Viability Percentage must be a float value.
