updated update report message
SVN-Revision: 9399

--- a/gov/nih/nci/calab/resources/submit.properties
+++ b/gov/nih/nci/calab/resources/submit.properties
@@ -13,7 +13,7 @@ error.nanoparticle.generalInfo=Error in getting the nanoparticle general info: {
 error.submitReport=Error in submiting the report: {0}
 message.submitReport.secure=Uploaded report has been sucessfully assigned to be visibile for groups: {0}
 message.submitReport.file=The report {0} has been succesfully uploaded.
-message.updateReport=You have successfully updated the report meta data for report: {0}.
+message.updateReport=You have successfully updated meta data for report: {0}.
 error.updateReport=Error in updating the report: {0}
 
 message.addParticleComposition=You've successfully added the physical composition data.
