added messages for updateDerivedBioAssayData
SVN-Revision: 9409

--- a/gov/nih/nci/calab/resources/submit.properties
+++ b/gov/nih/nci/calab/resources/submit.properties
@@ -55,6 +55,9 @@ nanoparticleCompositionForm.otherGeneration = Other Generation
 
 loadDerivedBioAssayDataForm.title=Assay Result File Title
 loadDerivedBioAssayDataForm.file=Assay Result File
+error.loadDerivedBioAssayData=Error in loading characterization file: {0}
+error.updateDerivedBioAssayData=Error in updating meta data for characterization file: {0}
+message.updateDerivedBioAssayData=You've successfully updated meta data for characterization file: {0}.
 
 nanoparticleMorphologyForm.type=Type
 
