--- a/fileupload.properties
+++ b/fileupload.properties
@@ -1,7 +1,7 @@
 # For File input and output
-# Directory for storing caLAB data files 
+# Directory for storing caNanoLab data files 
 fileRepositoryDir=C:\\temp\\calab\\fileupload\\
-# Directory for storing caLAB files
+# Directory for storing caNanoLab files
 
 #Directory for storing uploaded particle files
 particleFileRepositoryDir=
