--- a/gov/nih/nci/calab/resources/application.properties
+++ b/gov/nih/nci/calab/resources/application.properties
@@ -1,5 +1,5 @@
 # Resources for parameter 'gov.nih.nci.calab.resources.ApplicationResources'
-# Project P/caLAB
+# Project P/caNanoLab
 errors.required={0} is required.
 errors.invalid={0} is invalid.
 errors.integer={0} must be an integer number.
@@ -28,7 +28,7 @@ updatePasswordForm.loginId=Login ID
 updatePasswordForm.password=Password
 updatePasswordForm.newPassword=New Password is required and can not be the same as the old password
 updatePasswordForm.newPassword2=Retype new password again to match.
-message.password = New password is successfully updated in caLAB.
+message.password = New password is successfully updated in caNanoLab.
 error.password = Error in updating user password: {0}.
 
 # file download
